# pybind11_boost_example

./: CMakeLists.txt  LICENSE  README.md  build_wheels.yml_old.yml  build_wheels_new_old.yml  install.sh  setup.py
.github/workflows/: build_wheels.yml  main.yml
src/boost_example/: __init__.py
src/boost_example/_boost_example/: main.cpp
